# Zip

./: .gitmodules  CMakeLists.txt  readme.md
Examples/: CMakeLists.txt
Examples/0001_GetArchiveContent/: CMakeLists.txt  main.cpp
Examples/01_ExtractZip/: main.cpp
Source/: Archive.cpp  Archive.h  CMakeLists.txt  Types.h  ZipEntryMeta.cpp  ZipEntryMeta.h  miniz.h
